<?php

namespace App\Course\Model;

class EvaluationActionType
{
    public const FILE_UPLOAD = 1;
    public const PASCAL_COMPILATION = 2;
    public const TEACHER_EVALUATION = 3;
}